force-app/main/default/objects/Repair_Shop__c/Repair_Shop__c.object-meta.xml
<CustomObject>
    <label>정비소</label>
    <nameField>
        <label>정비소 이름</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>정비소</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>