force-app/main/default/objects/Repair_Shop__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>시/군/구</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Province__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>강남구</fullName>
            </value>
            <value>
                <fullName>강동구</fullName>
            </value>
            <value>
                <fullName>강북구</fullName>
            </value>
            <value>
                <fullName>강서구</fullName>
            </value>
            <value>
                <fullName>관악구</fullName>
            </value>
            <value>
                <fullName>광진구</fullName>
            </value>
            <value>
                <fullName>구로구</fullName>
            </value>
            <value>
                <fullName>금천구</fullName>
            </value>
            <value>
                <fullName>노원구</fullName>
            </value>
            <value>
                <fullName>도봉구</fullName>
            </value>
            <value>
                <fullName>동대문구</fullName>
            </value>
            <value>
                <fullName>동작구</fullName>
            </value>
            <value>
                <fullName>마포구</fullName>
            </value>
            <value>
                <fullName>서대문구</fullName>
            </value>
            <value>
                <fullName>서초구</fullName>
            </value>
            <value>
                <fullName>성동구</fullName>
            </value>
            <value>
                <fullName>성북구</fullName>
            </value>
            <value>
                <fullName>송파구</fullName>
            </value>
            <value>
                <fullName>양천구</fullName>
            </value>
            <value>
                <fullName>영등포구</fullName>
            </value>
            <value>
                <fullName>용산구</fullName>
            </value>
            <value>
                <fullName>은평구</fullName>
            </value>
            <value>
                <fullName>종로구</fullName>
            </value>
            <value>
                <fullName>중구</fullName>
            </value>
            <value>
                <fullName>중랑구</fullName>
            </value>
            <value>
                <fullName>가평군</fullName>
            </value>
            <value>
                <fullName>고양시</fullName>
            </value>
            <value>
                <fullName>과천시</fullName>
            </value>
            <value>
                <fullName>광명시</fullName>
            </value>
            <value>
                <fullName>광주시</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>