force-app/main/default/objects/Repair_Shop__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <label>전화번호</label>
    <type>Phone</type>
</CustomField>