force-app/main/default/objects/Repair_Shop__c/fields/Province__c.field-meta.xml
<CustomField>
    <fullName>Province__c</fullName>
    <label>시/도</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>서울특별시</fullName>
            </value>
            <value>
                <fullName>경기도</fullName>
            </value>
            <value>
                <fullName>부산광역시</fullName>
            </value>
            <value>
                <fullName>대구광역시</fullName>
            </value>
            <value>
                <fullName>인천광역시</fullName>
            </value>
            <value>
                <fullName>광주광역시</fullName>
            </value>
            <value>
                <fullName>대전광역시</fullName>
            </value>
            <value>
                <fullName>울산광역시</fullName>
            </value>
            <value>
                <fullName>세종특별자치시</fullName>
            </value>
            <value>
                <fullName>강원특별자치도</fullName>
            </value>
            <value>
                <fullName>충청북도</fullName>
            </value>
            <value>
                <fullName>충청남도</fullName>
            </value>
            <value>
                <fullName>전라북도</fullName>
            </value>
            <value>
                <fullName>전라남도</fullName>
            </value>
            <value>
                <fullName>경상북도</fullName>
            </value>
            <value>
                <fullName>경상남도</fullName>
            </value>
            <value>
                <fullName>제주특별자치도</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>