force-app/main/default/objects/Repair_Shop__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <inlineHelpText>정비소가 위치한 지역을 선택하세요.</inlineHelpText>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>서울</fullName>
            </value>
            <value>
                <fullName>경기</fullName>
            </value>
            <value>
                <fullName>부산</fullName>
            </value>
            <value>
                <fullName>대구</fullName>
            </value>
            <value>
                <fullName>대전</fullName>
            </value>
            <value>
                <fullName>광주</fullName>
            </value>
            <value>
                <fullName>인천</fullName>
            </value>
            <value>
                <fullName>기타</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>